--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
+	developmentOnly("org.springframework.boot:spring-boot-devtools")
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+
 }
 
 test {
