--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	compile 'org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE'
 	compile group: 'com.google.guava', name: 'guava', version: '27.0-jre'
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
+	testCompile('com.h2database:h2')
 }
 
 test {
