--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password= admin
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 server.port = 8081
+external.api.url = https://openlibrary.org/api/books?bibkeys=%s&format=json&jscmd=data
+restTemplateConfig.timeOut = 50000
